--- a/front/package.json
+++ b/front/package.json
@@ -8,6 +8,8 @@
     "@testing-library/user-event": "^12.8.3",
     "axios": "^0.21.1",
     "bootstrap": "^4.6.0",
+    "date-fns": "^2.19.0",
+    "formik": "^2.2.6",
     "node-polyglot": "^2.4.0",
     "prop-types": "^15.7.2",
     "react": "^17.0.1",
